--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -22,6 +22,14 @@ margin: 7px;
     background-color: #FFE0B3;
     border: none;
     border-radius: 0px 0px 8px 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.btn-cart .btn-text{
+    margin-right: 8px;
 }
 
 .btn-cart:hover{
